feat: refreshToken and documentation
