# src/Api/Http/router/users.routes.ts
@@ -2,6 +2,7 @@ import { CreateUserController } from "@Api/Controllers/users/CreateUserControlle
 import { DeleteUserController } from "@Api/Controllers/users/DeleteUserController";
 import { ListUserController } from "@Api/Controllers/users/ListUserController";
 import { UpdateUserController } from "@Api/Controllers/users/UpdateUserController";
+import { ensureAuthenticated } from "@Applications/Services/auth/ensureAuthenticated";
 import { Router } from "express";
 import multer from "multer";
 
@@ -17,5 +18,5 @@ const upload = multer({storage: storage});
 
 usersRoutes.post('/',upload.single('avatar'), createUserController.handle);
 usersRoutes.get('/', listUserController.handle);
-usersRoutes.patch('/',upload.single('avatar'), updateUserController.handle);
-usersRoutes.delete('/:userId', deleteUserController.handle);
+usersRoutes.patch('/',ensureAuthenticated, upload.single('avatar'), updateUserController.handle);
+usersRoutes.delete('/:userId', ensureAuthenticated, deleteUserController.handle);
